--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="relative h-screen">
         <!-- 背景图片层 -->
         <div class="absolute inset-0 bg-cover bg-center bg-no-repeat" 
-             style="background-image: url('./public/images/header.png');"></div>
+             style="background-image: url('/public/images/header.png');"></div>
         
         <!-- 渐变遮罩层 -->
         <div class="absolute inset-0 gradient-bg opacity-80"></div>
@@ -147,7 +147,7 @@
         <div class="relative z-10 flex flex-col items-center justify-center h-full px-4">
             <!-- Logo -->
             <div class="floating mb-8">
-                <img src="./public/images/logo.png" 
+                <img src="/public/images/logo.png" 
                      alt="EZdocx Logo" 
                      class="h-24 w-auto pulse-glow rounded-lg">
             </div>
@@ -162,7 +162,7 @@
             <!-- 截图展示 -->
             <div class="mb-12">
                 <div class="relative">
-                    <img src="./public/images/截图1.png" 
+                    <img src="/public/images/截图1.png" 
                          alt="EZdocx截图" 
                          class="max-w-2xl w-full h-auto rounded-2xl shadow-2xl border-4 border-white/20">
                     <!-- 截图装饰效果 -->
